feat(java): Java AWS-SDK shim generated with ToDafny