@@ -8,13 +8,18 @@ import com.squareup.javapoet.ParameterSpec;
 import com.squareup.javapoet.ParameterizedTypeName;
 import com.squareup.javapoet.TypeSpec;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import java.util.ArrayList;
-import java.util.HashSet;
+import java.util.Collections;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.lang.model.element.Modifier;
 
@@ -54,8 +59,10 @@ import static software.amazon.smithy.utils.StringUtils.uncapitalize;
  */
 @SuppressWarnings("OptionalGetWithoutIsPresent")
 public class ToDafny extends Generator {
+    private static final Logger LOGGER = LoggerFactory.getLogger(ToDafny.class);
     /** Additional Shapes to generate ToDafny converters for. */
     final Set<Shape> additionalShapes;
+    final Set<Shape> convertedShapes;
     /** Static imports to be added to generated code. */
     final Set<MethodReference> additionalStaticImports;
     /** Enums need two Methods; a string converter and an Enum converter. */
@@ -65,9 +72,10 @@ public class ToDafny extends Generator {
 
     public ToDafny(AwsSdk awsSdk) {
         super(awsSdk);
-        additionalShapes = new HashSet<>();
-        additionalStaticImports = new HashSet<>();
-        enumShapes = new HashSet<>();
+        additionalShapes = Collections.synchronizedSet(new LinkedHashSet<>());
+        convertedShapes = Collections.synchronizedSet(new LinkedHashSet<>());
+        additionalStaticImports = Collections.synchronizedSet(new LinkedHashSet<>());
+        enumShapes = Collections.synchronizedSet(new LinkedHashSet<>());
         thisClassName = ClassName.get(dafnyNameResolver.packageName(), "ToDafny");
     }
 
@@ -82,31 +90,38 @@ public class ToDafny extends Generator {
 
     TypeSpec toDafny(final ShapeId serviceShapeId) {
         final ServiceShape serviceShape = model.expectShape(serviceShapeId, ServiceShape.class);
-
         final List<MethodSpec> convertOperationOutputs = serviceShape
-                .members()
-                .stream()
-                .filter(MemberShape::isOperationShape)
-                .map(MemberShape::asOperationShape)
+                .getOperations().stream()
+                .map(shapeId -> model.expectShape(shapeId, OperationShape.class))
+                .map(OperationShape::getOutput)
+                .filter(Optional::isPresent)
                 .map(Optional::get)
-                .map(OperationShape::getOutputShape)
                 .map(this::generateConvertResponse)
                 .toList();
 
-        final List<MethodSpec> convertServiceErrors = serviceShape
-                .getErrors()
-                .stream()
+        final List<MethodSpec> convertServiceErrors = ModelUtils.streamServiceErrors(model, serviceShape)
                 .map(this::generateConvertError)
-                .toList();
+                .collect(Collectors.toList());
         convertServiceErrors.add(generateConvertOpaqueError());
 
-        final List<MethodSpec> convertAdditional = additionalShapes
-                .stream()
-                .map(Shape::toShapeId)
-                .map(this::generateConvert)
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .toList();
+        // We will have to make multiple passes of additionalShapes,
+        // since more "shapes" may be discovered on each pass
+        List<MethodSpec> convertAdditional = new ArrayList<>();
+        while(additionalShapes.size() > 0) {
+            LOGGER.error(
+                    "Adding %d additional shapes; already done %d; methods %d ".formatted(
+                            additionalShapes.size(), convertAdditional.size(), convertAdditional.size()));
+            LinkedHashSet<Shape> this_pass_shapes = new LinkedHashSet<>(additionalShapes);
+            additionalShapes.clear();
+            convertAdditional.addAll(this_pass_shapes
+                    .stream()
+                    .map(Shape::toShapeId)
+                    .map(this::generateConvert)
+                    .filter(Optional::isPresent)
+                    .map(Optional::get).toList());
+            convertedShapes.addAll(this_pass_shapes);
+        }
+
         // For enums, we generate overloaded methods,
         // one to convert instances of the Enum
         final List<MethodSpec> convertEnumEnum = enumShapes
@@ -330,7 +345,11 @@ public class ToDafny extends Generator {
         // if in namespace
         if (nativeNameResolver.isInServiceNameSpace(target.getId())) {
             // add to additionalShapes,
-            additionalShapes.add(target);
+            synchronized (additionalShapes) {
+                if (!convertedShapes.contains(target)) {
+                    additionalShapes.add(target);
+                }
+            }
             // and reference to be created converter
             return new MethodReference(thisClassName, methodName);
         }
@@ -398,8 +417,8 @@ public class ToDafny extends Generator {
 
 
     /**  */
-    MethodSpec generateConvertError(final ShapeId shapeId) {
-        MethodSpec structure = generateConvertStructure(shapeId);
+    MethodSpec generateConvertError(final StructureShape shape) {
+        MethodSpec structure = generateConvertStructure(shape.getId());
         MethodSpec.Builder builder = structure.toBuilder();
         builder.setName("Error");
         return builder.build();
